# UnnamedEngine

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERSIONING.md
.github/ISSUE_TEMPLATE/: Bug.yml  Feature.yml
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml
unnamed_client/: Cargo.toml  build.rs
unnamed_client/src/: main.rs  unnamed_client.rs
unnamed_client/src/client/: client.rs  mod.rs
unnamed_editor/: Cargo.toml  build.rs
unnamed_editor/src/: main.rs
unnamed_editor/src/editor/: editor.rs  mod.rs
unnamed_engine/: Cargo.toml
unnamed_engine/src/: lib.rs  screen.wgsl  shader.wgsl
unnamed_engine/src/core/: application.rs  engine.rs  mod.rs  module.rs  state.rs
unnamed_engine/src/event/: event.rs  mod.rs
unnamed_engine/src/gui/: egui_renderer.rs  gui.rs  mod.rs
unnamed_engine/src/input/: input_manager.rs  keyboard.rs  mod.rs  mouse.rs
unnamed_engine/src/networking/: common.rs
unnamed_engine/src/renderer/: camera.rs  material.rs  middleware_renderer.rs  mod.rs  renderer.rs  screen.rs  texture.rs  transform.rs  viewport.rs
unnamed_engine/src/simulation/: chunk.rs  mod.rs  voxel.rs
unnamed_engine/src/voxel/: mod.rs  rendering.rs
unnamed_server/: Cargo.toml  build.rs
unnamed_server/src/: main.rs
unnamed_server/src/server/: mod.rs  server.rs
