[package]
name = "unnamed_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
tokio = { version = "1.32.0", features = ["full"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"
