[package]
name = "unnamed_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
winit = { version = "0.29.10", features = ["rwh_05"]}
env_logger = "0.11.1"
log = "0.4"
wgpu = "0.19.1"
tokio = { version = "1.32.0", features = ["full"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"
