[package]
name = "unnamed_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
winit = { version = "0.29.10", features = ["rwh_05"]}
env_logger = "0.11.1"
log = "0.4"
wgpu = "0.19.1"
tokio = { version = "1.32.0", features = ["full"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"
egui = "0.26.0"
egui-wgpu = "0.26.0"
egui-winit = "0.26.0"
quinn = "0.10.0"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
instant = "0.1.12"
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics"] }

rcgen = "0.12.1"
